--- a/scss/layout/_main-section.scss
+++ b/scss/layout/_main-section.scss
@@ -1,6 +1,6 @@
 .main{
   background-color: $black;
-  height: 32vh;
+  min-height: 32vh;
   display: flex;
   padding: $hero-padding;
   margin-bottom: 2vh;
